--- a/views/www.qidian.com/section_2.html
+++ b/views/www.qidian.com/section_2.html
@@ -24,7 +24,7 @@
                             </div>
                             <div class="book-cover">
                                 <a class="link" href="http://www.qidian.com/Book/<%= chartForbes[0]['bookId'] %>.aspx %>" target="_blank" data-bid="<%= chartForbes[0]['bookId'] %>">
-                                    <img src="<%= chartForbes[0]['imageUrl'] %>" alt="">
+                                    <img src="<%= chartForbes[0]['imageUrl'] %>" alt="<%= chartForbes[0]['bookName'] %>">
                                 </a>
                                 <span></span>
                             </div>
@@ -65,7 +65,7 @@
                             </div>
                             <div class="book-cover">
                                 <a class="link" href="http://www.qidian.com/Book/<%= chartDaySales[0]['bookId'] %>.aspx %>" target="_blank" data-bid="<%= chartDaySales[0]['bookId'] %>">
-                                    <img src="<%= chartDaySales[0]['imageUrl'] %>" alt="">
+                                    <img src="<%= chartDaySales[0]['imageUrl'] %>" alt="<%= chartDaySales[0]['bookName'] %>">
                                 </a>
                                 <span></span>
                             </div>
@@ -115,7 +115,7 @@
                             </div>
                             <div class="book-cover">
                                 <a class="link" href="http://www.qidian.com/Book/<%= chartWeekClick[0]['bookId'] %>.aspx %>" target="_blank" data-bid="<%= chartWeekClick[0]['bookId'] %>">
-                                    <img src="<%= chartWeekClick[0]['imageUrl']  %>" alt="">
+                                    <img src="<%= chartWeekClick[0]['imageUrl']  %>" alt="<%= chartWeekClick[0]['bookName'] %>">
                                 </a>
                                 <span></span>
                             </div>
@@ -156,7 +156,7 @@
                             </div>
                             <div class="book-cover">
                                 <a class="link" href="http://www.qidian.com/Book/<%= chartWeekRecom[0]['bookId'] %>.aspx %>" target="_blank" data-bid="<%= chartWeekRecom[0]['bookId'] %>">
-                                    <img src="<%= chartWeekRecom[0]['imageUrl'] %>" alt="">
+                                    <img src="<%= chartWeekRecom[0]['imageUrl'] %>" alt="<%= chartWeekRecom[0]['bookName'] %>">
                                 </a>
                                 <span></span>
                             </div>
@@ -197,7 +197,7 @@
                             </div>
                             <div class="book-cover">
                                 <a class="link" href="http://www.qidian.com/Book/<%= chartVipAuthorNewBook[0]['bookId'] %>.aspx %>" target="_blank" data-bid="<%= chartVipAuthorNewBook[0]['bookId'] %>">
-                                    <img src="<%= chartVipAuthorNewBook[0]['imageUrl']  %>" alt="">
+                                    <img src="<%= chartVipAuthorNewBook[0]['imageUrl']  %>" alt="<%= chartVipAuthorNewBook[0]['bookName'] %>">
                                 </a>
                                 <span></span>
                             </div>
