--- a/static/qd/css/list_module.css
+++ b/static/qd/css/list_module.css
@@ -22,7 +22,7 @@
 /* 过渡动画 默认0.3秒 */
 /* 平面书封hover放大到1.1倍 */
 /* 父容器清浮动 */
-.book-img-text li, .book-img-text .book-mid-info p.author, .book-img-text .all-img-list, .other-rec-wrap li, .other-rec-wrap li .book-info .author {
+.book-img-text .book-mid-info p.author, .book-img-text .all-img-list, .other-rec-wrap li, .other-rec-wrap li .book-info .author {
   overflow: hidden;
   *zoom: 1; }
 
@@ -59,12 +59,13 @@
 
 /* 图文展示列表 */
 .book-img-text {
+  min-height: 700px;
   /* 书封面容器 */
   /* 书介绍信息 */
   /* 书统计信息-加入书架按钮 */ }
   .book-img-text li {
-    margin-bottom: 24px;
-    padding-bottom: 22px; }
+    height: 162px;
+    margin-bottom: 24px; }
     .book-img-text li:last-of-type {
       border-bottom: none;
       margin-bottom: 0; }
@@ -156,6 +157,8 @@
         color: #3F5A93; }
         .book-img-text .book-mid-info p.update a:hover {
           color: #2972CC; }
+        .book-img-text .book-mid-info p.update a.red {
+          color: #BF2C24; }
       .book-img-text .book-mid-info p.update i {
         display: inline-block;
         vertical-align: middle;
@@ -249,7 +252,7 @@
   margin-bottom: 24px; }
 
 .book-img-text .all-img-list {
-  height: 1805px; }
+  height: 1845px; }
   .book-img-text .all-img-list li {
     float: left;
     width: 477px; }
@@ -448,6 +451,7 @@ em.number {
     position: relative;
     margin-right: 12px;
     color: #A6A6A6;
+    height: 40px;
     font: 12px/40px "PingFangSC-Regular", Simsun; }
     .tool-bar .select-wrap a:hover {
       color: #ED4259; }
@@ -455,7 +459,8 @@ em.number {
       display: inline-block;
       vertical-align: middle;
       font-size: 12px;
-      margin: 0 0 0 4px; }
+      line-height: 40px;
+      margin: -1px 0 0 4px; }
     .tool-bar .select-wrap a.act {
       font-weight: 700;
       color: #ED4259; }
@@ -583,14 +588,23 @@ em.number {
 /* 暂无数据的图片样式 */
 .no-data-img {
   display: block;
+  width: 243px;
+  height: 100px;
+  margin: 0 auto;
+  background: url("/qd/images/common/big_wu.png") no-repeat; }
+
+.other-rec-wrap .no-data-img {
   width: 161px;
   height: 90px;
-  margin: 0 auto;
   background: url("/qd/images/common/wu.png") no-repeat; }
 
 /* retina屏双倍图 */
 @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
   .no-data-img {
+    background: url("/qd/images/common/big_wu_3x.png") no-repeat;
+    background-size: 100%; }
+
+  .other-rec-wrap .no-data-img {
     background: url("/qd/images/common/wu_3x.png") no-repeat;
     background-size: 100%; }
 
