--- a/static/qd/css/rank.css
+++ b/static/qd/css/rank.css
@@ -186,7 +186,7 @@
       display: inline-block;
       font: 700 12px/16px "PingFangSC-Regular", Simsun; }
       .fans-list h3 b.col-1 {
-        margin-right: 20px; }
+        margin-right: 15px; }
       .fans-list h3 b.col-2 {
         margin-right: 30px; }
   .fans-list ul {
@@ -194,7 +194,7 @@
   .fans-list li .number, .fans-list li a {
     float: left; }
   .fans-list li .number {
-    margin-right: 43px; }
+    margin-right: 40px; }
   .fans-list li a {
     font: 14px/40px "PingFangSC-Regular", Simsun;
     width: 110px;
@@ -205,7 +205,7 @@
     float: right;
     font: 12px/40px Arail;
     color: #A6A6A6;
-    width: 50px;
+    max-width: 60px;
     white-space: normal;
     overflow: hidden;
     text-overflow: ellipsis; }
@@ -213,6 +213,9 @@
 .rank-view-list .book-img-text li:last-of-type {
   border-bottom: none;
   margin-bottom: 0; }
+
+.fans-data-list {
+  padding-bottom: 60px; }
 
 /* 无数据样式 */
 .no-rank-data {
