--- a/static/qd/css/sass/index.scss
+++ b/static/qd/css/sass/index.scss
@@ -176,9 +176,9 @@
 						em {
 							display: inline-block;
 							width: 38px;
-							height: 16px;
+							height: 18px;
 							margin: -2px 10px 0 8px;
-							font: 12px/16px $simsun;
+							font: 12px/18px $simsun;
 							text-align: center;
 							vertical-align: middle;
 							color: #FFF;
@@ -284,6 +284,30 @@
 	.book-list ul {
 		height: 503px;
 		overflow: hidden;
+	}
+	/*
+	 * 只有首页第二屏排行有此样式
+	 * name后有hot小标识
+	 */
+	.book-list-wrap .book-list li strong {
+		float: left;
+		margin-left: -3px;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		color: #1A1A1A;
+		position: relative;
+		.name {
+			margin-left: 0;
+		}
+		.hot {
+			position: absolute;
+			top: 0;
+			right: -20px;
+			width: 18px;
+			height: 10px;
+			background: url("/qd/images/common/tag.png") 0 -11px no-repeat;
+		}
+
 	}
 }
 /* 编辑推荐 */
@@ -1067,15 +1091,10 @@
 					}
 					.vip {
 						float: left;
-						width: 20px;
-						height: 12px;
-						padding: 0 1px;
-						margin-top: 9px;
-						font: 12px/12px $simsun;
-						text-align: center;
-						color: white;
-						background: #FC6C28;
-						overflow: hidden;
+						width: 19px;
+						height: 11px;
+						margin-top: 10px;
+						background: url("/qd/images/common/tag.png") no-repeat 0 -21px;
 					}
 					i {
 						float: right;
@@ -1623,10 +1642,6 @@ em.point {
 			}
 		}
 	}
-	.focus-wrap .classify-list dd a cite .rec {
-		background: url("/qd/images/index/rec2x.png") no-repeat;
-		background-size: 100%;
-	}
 	.survey-btn {
 		background: url(/qd/images/index/survey_btn.png) no-repeat;
 		background-size: 100%;
@@ -1634,6 +1649,13 @@ em.point {
 	.survey-wrap .survey-box p {
 		background: url(/qd/images/index/survey.png) no-repeat;
 		background-size: 100%;
+	}
+	.update-wrap .update-list-wrap .update-list table td .vip {
+		background: url("/qd/images/common/tag_2x.png") 0 -18px no-repeat;
+		background-size: 100%;
+	}
+	.book-list-wrap .book-list li strong .hot{
+		background: url("/qd/images/common/tag_2x.png") 0 -11px no-repeat;
 	}
 }
 /* 1250px以下 排行榜ul宽度去除，不让右侧出白边*/
