--- a/static/qd/css/sass/list_module.scss
+++ b/static/qd/css/sass/list_module.scss
@@ -38,10 +38,10 @@
 }
 /* 图文展示列表 */
 .book-img-text {
+	min-height: 700px;
 	li {
-		@extend %cf;
+		height: 162px;
 		@include mb(24px);
-		padding-bottom: 22px;
 		@extend %bbd;
 		&:last-of-type {
 			border-bottom: none;
@@ -158,6 +158,9 @@
 				color: $blue;
 				&:hover {
 					color: $blue_hover;
+				}
+				&.red {
+					color: $red;
 				}
 			}
 			i {
@@ -279,7 +282,7 @@
 }
 .book-img-text .all-img-list {
 	//全部作品、完本、免费 列表列表的容器高度限制，去除最后一根横线
-	height: 1805px;
+	height: 1845px;
 	@extend %cf;
 	li {
 		float: left;
@@ -530,6 +533,7 @@ em.number {
 		position: relative;
 		margin-right: 12px;
 		color: $A6;
+		height: 40px;
 		font: 12px/40px $simsun;
 		&:hover {
 			color: $hover;
@@ -538,7 +542,8 @@ em.number {
 			display: inline-block;
 			vertical-align: middle;
 			font-size: 12px;
-			margin: 0 0 0 4px;
+			line-height: 40px;
+			margin: -1px 0 0 4px;
 		}
 		&.act {
 			font-weight: 700;
@@ -693,14 +698,24 @@ em.number {
 /* 暂无数据的图片样式 */
 .no-data-img {
 	display: block;
+	width: 243px;
+	height: 100px;
+	margin: 0 auto;
+	background: url('/qd/images/common/big_wu.png') no-repeat;
+}
+.other-rec-wrap .no-data-img {
 	width: 161px;
 	height: 90px;
-	margin: 0 auto;
 	background: url('/qd/images/common/wu.png') no-repeat;
+
 }
 /* retina屏双倍图 */
 @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
 	.no-data-img {
+		background: url('/qd/images/common/big_wu_3x.png') no-repeat;
+		background-size: 100%;
+	}
+	.other-rec-wrap .no-data-img {
 		background: url('/qd/images/common/wu_3x.png') no-repeat;
 		background-size: 100%;
 	}
