--- a/static/qd/css/sass/rank.scss
+++ b/static/qd/css/sass/rank.scss
@@ -212,7 +212,7 @@
 			display: inline-block;
 			font: 700 12px/16px $simsun;
 			&.col-1 {
-				margin-right: 20px;
+				margin-right: 15px;
 			}
 			&.col-2 {
 				margin-right: 30px;
@@ -228,7 +228,7 @@
 			float: left;
 		}
 		.number {
-			margin-right: 43px;
+			margin-right: 40px;
 		}
 		a {
 			font: 14px/40px $simsun;
@@ -239,7 +239,7 @@
 			float: right;
 			font: 12px/40px Arail;
 			color: $A6;
-			width: 50px;
+			max-width: 60px;
 			@include word-wrap-multi;
 		}
 	}
@@ -247,6 +247,9 @@
 .rank-view-list .book-img-text li:last-of-type {
 	border-bottom: none;
 	margin-bottom: 0;
+}
+.fans-data-list{
+	padding-bottom: 60px;
 }
 /* 无数据样式 */
 .no-rank-data {
