--- a/static/qd/css/search.css
+++ b/static/qd/css/search.css
@@ -1,4 +1,4 @@
-@charset 'UTF-8';
+@charset "UTF-8";
 /**
  * @author yangye
  * @design yangxuesong;
@@ -25,182 +25,145 @@
 /* 标题下边框线 */
 /* 搜书页 */
 .pin-nav-wrap {
-    position: relative;
-    z-index: 10;
-    top: 0;
-}
+  position: relative;
+  z-index: 10;
+  top: 0; }
 
 .search-container {
-    height: 40px;
-    padding: 30px 0;
-}
+  height: 40px;
+  padding: 30px 0; }
 
 .search-wrap {
-    width: 480px;
-    margin: 0 auto;
-}
-.search-wrap input {
+  width: 480px;
+  margin: 0 auto; }
+  .search-wrap input {
     float: left;
     width: 375px;
     height: 38px;
-    padding: 0 12px;
-    border: 1px solid #dbdbdb;
-    border-right: none; 
     line-height: 38px;
-}
-.search-wrap input:hover {
-    border-color: #c9c9c9;
-}
-.search-wrap .search-btn {
+    padding: 0 12px;
+    border: 1px solid #DBDBDB;
+    border-right: none; }
+    .search-wrap input:hover {
+      border-color: #C9C9C9; }
+  .search-wrap .search-btn {
     float: left;
     width: 80px;
     height: 40px;
-    background: #bf2c24; 
-    color: white;
     font: 18px/40px FZZCYSK;
-    text-align: center;
-    text-indent: 5px;
     letter-spacing: 4px;
-}
-.search-wrap .search-btn:hover {
-    background: #ed4259;
-}
+    text-indent: 5px;
+    color: white;
+    text-align: center;
+    background: #BF2C24; }
+    .search-wrap .search-btn:hover {
+      background: #ED4259; }
 
 /* 搜索结果容器 */
 .result-wrap {
-    padding: 0 0 30px;
-}
+  padding: 0 0 30px; }
 
 /* 搜索命中作者 */
 .is-author-wrap h3 {
-    padding-bottom: 4px;
-    border-bottom: 1px solid #666;
-    font: 18px/21px FZZCYSK;
-}
+  padding-bottom: 4px;
+  border-bottom: 1px solid #666;
+  font: 18px/21px FZZCYSK; }
 
 .author-info-wrap {
-    padding: 32px 0;
-}
-.author-info-wrap .author-photo {
+  padding: 32px 0; }
+  .author-info-wrap .author-photo {
     width: 120px;
     height: 120px;
-    margin-right: 20px;
-}
-.author-info-wrap .author-photo img {
-    width: 120px;
-    height: 120px;
-    border-radius: 100%;
-}
-.author-info-wrap .author-info {
-    padding-top: 8px;
-}
-.author-info-wrap .author-info h4 {
-    margin-bottom: 8px;
-    font: 18px/24px 'PingFangSC-Regular', 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Microsoft YaHei', 'sans-serif';
-}
-.author-info-wrap .author-info h4 span {
-    margin-left: 6px;
-    padding: 0 6px;
-    border-radius: 12px;
-    background: #e67225; 
-    color: white;
-    font: italic 12px/14px Arial;
-}
-.author-info-wrap .author-info p.title {
-    margin-bottom: 20px;
-    color: #a6a6a6; 
-    font: 12px/16px 'PingFangSC-Regular', Simsun;
-}
-.author-info-wrap .author-info .count li {
-    float: left;
-    height: 34px;
-    padding-right: 24px;
-}
-.author-info-wrap .author-info .count li.line {
-    width: 1px;
-    margin-right: 24px;
-    padding-right: 0;
-    border-right: 1px solid #e6e6e6;
-}
-.author-info-wrap .author-info .count li p {
-    color: #a6a6a6; 
-    font: 12px/16px 'PingFangSC-Regular', Simsun;
-}
-.author-info-wrap .author-info .count li span {
-    font: 18px/18px Arial;
-}
-.author-info-wrap .author-work {
-    margin-top: 12px;
-}
-.author-info-wrap .author-work li {
-    float: left;
-    margin-left: 24px;
-    text-align: center;
-}
-.author-info-wrap .author-work li a {
-    display: block;
-    overflow: hidden; 
-    font-size: 12px;
-}
-.author-info-wrap .author-work li .img-box {
-    width: 66px;
-    height: 88px;
-    margin-bottom: 6px;
-}
-.author-info-wrap .author-work li .img-box a, .author-info-wrap .author-work li .img-box img {
-    width: 66px;
-    height: 88px;
-}
-.author-info-wrap .author-work li .img-box a {
-    box-shadow: 0 0 5px rgba(0, 0, 0, .6);
-}
-.author-info-wrap .author-work li .img-box img {
-    -webkit-transition: -webkit-transform .3s ease-out;
-       -moz-transition:    -moz-transform .3s ease-out;
-        -ms-transition:     -ms-transform .3s ease-out;
-            transition:         transform .3s ease-out;
-}
-.author-info-wrap .author-work li .img-box img:hover {
-    -webkit-transform: scale(1.1);
-       -moz-transform: scale(1.1);
-         -o-transform: scale(1.1);
-            transform: scale(1.1);
-}
+    margin-right: 20px; }
+    .author-info-wrap .author-photo img {
+      width: 120px;
+      height: 120px;
+      border-radius: 100%; }
+  .author-info-wrap .author-info {
+    padding-top: 8px; }
+    .author-info-wrap .author-info h4 {
+      margin-bottom: 8px;
+      font: 18px/24px "PingFangSC-Regular", "HelveticaNeue-Light", "Helvetica Neue Light", "Microsoft YaHei", "sans-serif"; }
+      .author-info-wrap .author-info h4 span {
+        margin-left: 6px;
+        padding: 0 6px;
+        border-radius: 12px;
+        font: italic 12px/14px Arial;
+        color: white;
+        background: #E67225; }
+    .author-info-wrap .author-info p.title {
+      margin-bottom: 20px;
+      font: 12px/16px "PingFangSC-Regular", Simsun;
+      color: #A6A6A6; }
+    .author-info-wrap .author-info .count li {
+      float: left;
+      height: 34px;
+      padding-right: 24px; }
+      .author-info-wrap .author-info .count li.line {
+        width: 1px;
+        padding-right: 0;
+        margin-right: 24px;
+        border-right: 1px solid #E6E6E6; }
+      .author-info-wrap .author-info .count li p {
+        font: 12px/16px "PingFangSC-Regular", Simsun;
+        color: #A6A6A6; }
+      .author-info-wrap .author-info .count li span {
+        font: 18px/18px Arial; }
+  .author-info-wrap .author-work {
+    margin-top: 12px; }
+    .author-info-wrap .author-work li {
+      float: left;
+      margin-left: 24px;
+      text-align: center; }
+      .author-info-wrap .author-work li a {
+        display: block;
+        font-size: 12px;
+        overflow: hidden; }
+      .author-info-wrap .author-work li .img-box {
+        width: 66px;
+        height: 88px;
+        margin-bottom: 6px; }
+        .author-info-wrap .author-work li .img-box a, .author-info-wrap .author-work li .img-box img {
+          width: 66px;
+          height: 88px; }
+        .author-info-wrap .author-work li .img-box a {
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.6); }
+        .author-info-wrap .author-work li .img-box img {
+          -webkit-transition: -webkit-transform 0.3s ease-out;
+          -moz-transition: -moz-transform 0.3s ease-out;
+          -ms-transition: -ms-transform 0.3s ease-out;
+          transition: transform 0.3s ease-out; }
+          .author-info-wrap .author-work li .img-box img:hover {
+            -webkit-transform: scale(1.1);
+            -moz-transform: scale(1.1);
+            -o-transform: scale(1.1);
+            transform: scale(1.1); }
 
 /* 暂无数据 */
 .no-result-wrap {
-    height: 200px;
-    margin-bottom: 30px;
-    background: #f7f6f2;
-    text-align: center;
-}
-.no-result-wrap .no-result-img {
-    padding: 47px 0 13px;
-}
-.no-result-wrap h3 {
-    font: 16px/24px 'PingFangSC-Regular', 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Microsoft YaHei', 'sans-serif';
-}
-.no-result-wrap p {
-    color: #a6a6a6; 
-    font: 14px/24px 'PingFangSC-Regular', Simsun;
-}
-.no-result-wrap p .blue {
-    margin: 0 5px;
-}
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  text-align: center; }
+  .no-result-wrap .no-result-img {
+    padding: 47px 0 13px; }
+  .no-result-wrap h3 {
+    font: 16px/24px "PingFangSC-Regular", "HelveticaNeue-Light", "Helvetica Neue Light", "Microsoft YaHei", "sans-serif"; }
+  .no-result-wrap p {
+    font: 14px/24px "PingFangSC-Regular", Simsun;
+    color: #A6A6A6; }
+    .no-result-wrap p .blue {
+      margin: 0 5px; }
 
 .search-title {
-    height: 20px;
-    margin-bottom: 24px;
-    padding: 10px 0;
-    border-bottom: 1px solid #666;
-    font-family: 'FZZCYSK'; 
-    font-size: 18px;
-    line-height: 20px;
-}
+  height: 20px;
+  padding: 10px 0;
+  font: 18px/20px FZZCYSK;
+  border-bottom: 1px solid #666;
+  margin-bottom: 24px; }
 
 /* 1024 响应点样式变动 */
 @media (max-width: 1025px) {
-    .book-img-text .book-mid-info {
-        width: 380px;
-    }
-}
+  .book-img-text .book-mid-info {
+    width: 380px; } }
+
+/*# sourceMappingURL=search.css.map */
