--- a/views/www.qidian.com/section_3.html
+++ b/views/www.qidian.com/section_3.html
@@ -13,7 +13,7 @@
                     <ul id="left-slide-01" class="roundabout">
                         <% for(var i=0; i < hotBook.length; i++) { %>
                         <li class="book<%=i+1%>" data-id="<%=i+1%>" data-type="1" data-width="93px" data-height="100%">
-                            <img class="lazy" data-original="<%= hotBook[i]['imageUrl']%>">
+                            <img class="lazy" data-original="<%= hotBook[i]['imageUrl']%>" alt="<%= hotBook[i]['bookName']%>">
                         </li>
                         <% } %>
                     </ul>
@@ -152,7 +152,7 @@
                     </div>
                     <div class="book-cover">
                         <a class="link" href="http://www.qidian.com/Book/<%= chanImgRecom[0]['bookId'] %>.aspx %>" target="_blank" data-bid="<%= chanImgRecom[0]['bookId'] %>">
-                            <img src="<%= chanImgRecom[0]['imageUrl']  %>" alt="">
+                            <img src="<%= chanImgRecom[0]['imageUrl']  %>" alt="<%= chanImgRecom[0]['bookName'] %>">
                         </a>
                         <span></span>
                     </div>
@@ -167,7 +167,7 @@
                     </div>
                     <div class="book-cover">
                         <a class="link" href="http://www.qidian.com/Book/<%= chanImgRecom[1]['bookId'] %>.aspx %>" target="_blank" data-bid="<%= chanImgRecom[1]['bookId'] %>">
-                            <img src="<%= chanImgRecom[1]['imageUrl']  %>" alt="">
+                            <img src="<%= chanImgRecom[1]['imageUrl']  %>" alt="<%= chanImgRecom[1]['bookName'] %>">
                         </a>
                         <span></span>
                     </div>
