--- a/views/www.qidian.com/section_4.html
+++ b/views/www.qidian.com/section_4.html
@@ -14,7 +14,7 @@
                 <ul id="left-slide-02" class="roundabout">
                     <% for(var i=0; i < finBookRecom['finBkFocus'].length; i++) { %>
                     <li class="book<%=i+1%>" data-id="<%=i+1%>" data-type="1" data-width="93px" data-height="100%">
-                        <img class="lazy" data-original="<%= finBookRecom['finBkFocus'][i]['imageUrl']%>">
+                        <img class="lazy" data-original="<%= finBookRecom['finBkFocus'][i]['imageUrl']%>" alt="<%= finBookRecom['finBkFocus'][i]['bookName']%>">
                     </li>
                     <% } %>
                 </ul>
@@ -61,7 +61,7 @@
                 <% for(var i=0; i < recomFinBook.length; i++) { %>
                 <li>
                     <div class="book-img">
-                        <a href="http://www.qidian.com/Book/<%= recomFinBook[i]['bookId'] %>.aspx %>" target="_blank" data-bid="<%= recomFinBook[i]['bookId'] %>"><img class="lazy" data-original="<%=  recomFinBook[i]['imageUrl'] %>" alt="">
+                        <a href="http://www.qidian.com/Book/<%= recomFinBook[i]['bookId'] %>.aspx %>" target="_blank" data-bid="<%= recomFinBook[i]['bookId'] %>"><img class="lazy" data-original="<%=  recomFinBook[i]['imageUrl'] %>" alt="<%= recomFinBook[i]['bookName'] %>">
                             <%
                                 //评分小于7.0时不显示
                                 var score = recomFinBook[i]['praiseCnt']
@@ -82,7 +82,7 @@
                             <span><%=  recomFinBook[i]['wordsCount'] %>字</span>
                             <i><%= recomFinBook[i]['subCategoryName']
                             %></i>
-                            <a class="author" href="http://me.qidian.com/authorIndex.aspx?id=<%= recomFinBook[i]['authorId']  %>" target="_blank"><img class="lazy" data-original="<%= staticConf.staticPath %>/images/ico/user.png" alt=""><%=
+                            <a class="author" href="http://me.qidian.com/authorIndex.aspx?id=<%= recomFinBook[i]['authorId']  %>" target="_blank"><img class="lazy" data-original="<%= staticConf.staticPath %>/images/ico/user.png"><%=
                             recomFinBook[i]['authorName'] %></a>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                             </div>
                             <div class="book-cover">
                                 <a class="link" href="http://www.qidian.com/Book/<%= chartLastFinBook[0]['bookId'] %>.aspx %>" target="_blank" data-bid="<%= chartLastFinBook[0]['bookId'] %>">
-                                    <img src="<%= chartLastFinBook[0]['imageUrl']  %>" alt="">
+                                    <img src="<%= chartLastFinBook[0]['imageUrl']  %>" alt="<%= chartLastFinBook[0]['bookName'] %>">
                                 </a>
                                 <span></span>
                             </div>
