--- a/views/www.qidian.com/section_5.html
+++ b/views/www.qidian.com/section_5.html
@@ -12,7 +12,7 @@
                 <ul id="left-slide-03" class="roundabout">
                     <% for(var i=0; i < hotBook.length; i++) { %>
                     <li class="book<%=i+1%>" data-id="<%=i+1%>" data-type="1" data-width="93px" data-height="100%">
-                        <img class="lazy" data-original="<%= newBookRecom['newBookFocus'][i]['imageUrl']%>">
+                        <img class="lazy" data-original="<%= newBookRecom['newBookFocus'][i]['imageUrl']%>" alt="<%= newBookRecom['newBookFocus'][i]['bookName']%>">
                     </li>
                     <% } %>
                 </ul>
@@ -79,7 +79,7 @@
                         <div class="state-box cf">
                             <span><%= recomImgNewBook[i]['dailyUpdateWords']  %></span><i><%=
                             recomImgNewBook[i]['subCategoryName']
-                            %></i><a class="author" href="http://me.qidian.com/authorIndex.aspx?id=<%= recomImgNewBook[i]['authorId']  %>" target="_blank"><img src="<%= staticConf.staticPath %>/images/ico/user.png" alt=""><%=
+                            %></i><a class="author" href="http://me.qidian.com/authorIndex.aspx?id=<%= recomImgNewBook[i]['authorId']  %>" target="_blank"><img src="<%= staticConf.staticPath %>/images/ico/user.png"><%=
                             recomImgNewBook[i]['authorName'] %></a>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
                         <div class="state-box cf">
                             <span><%= recomWordNewBook[i]['dailyUpdateWords'] %></span><i><%=
                             recomWordNewBook[i]['subCategoryName']
-                            %></i><a class="author" href="http://me.qidian.com/authorIndex.aspx?id=<%= recomWordNewBook[i]['authorId']  %>" target="_blank"><img src="<%= staticConf.staticPath %>/images/ico/user.png" alt=""><%=
+                            %></i><a class="author" href="http://me.qidian.com/authorIndex.aspx?id=<%= recomWordNewBook[i]['authorId']  %>" target="_blank"><img src="<%= staticConf.staticPath %>/images/ico/user.png"><%=
                             recomWordNewBook[i]['authorName'] %></a>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                             </div>
                             <div class="book-cover">
                                 <a class="link" href="http://www.qidian.com/Book/<%= chartSignNewBook[0]['bookId'] %>.aspx %>" target="_blank" data-bid="<%= chartSignNewBook[0]['bookId'] %>">
-                                    <img src="<%=  chartSignNewBook[0]['imageUrl'] %>" alt="">
+                                    <img src="<%=  chartSignNewBook[0]['imageUrl'] %>" alt="<%= chartSignNewBook[0]['bookName'] %>">
                                 </a>
                                 <span></span>
                             </div>
